# Interdependent-core

./: .gitignore  CHANGELOG.md  DOCTRINE.md  README.md  claude.md  conftest.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
interdependent_lib/: __init__.py  guardian.py  theta.py
interdependent_lib/edcm/: __init__.py  scorer.py
interdependent_lib/edcmbone/: __init__.py
interdependent_lib/edcmbone/behavioral/: __init__.py  formula_eval.py
interdependent_lib/edcmbone/canon/behavioral/: _R_patch.json
interdependent_lib/pcea/: __init__.py
interdependent_lib/pcna/: __init__.py
interdependent_lib/ptca/: __init__.py  core.py  instance.py  seed.py
prime_core/: HANDOFF.md  LICENSE  README.md  pyproject.toml
prime_core/docs/: canon.md
prime_core/src/prime_core/: __init__.py  guardian.py  invariants.py  theta.py
prime_core/src/prime_core/pcea/: __init__.py  core.py
prime_core/src/prime_core/pcna/: __init__.py  layer.py  network.py  sigma.py
prime_core/src/prime_core/pcta/: __init__.py  circle.py
prime_core/src/prime_core/ptca/: __init__.py  core.py  exchange.py  instance.py  primes.py  provenance.py  seed.py  sentinels.py  tensor.py
prime_core/tests/: test_invariants.py  test_pcea_core.py  test_pcna.py  test_pcta.py  test_ptca.py  test_ptca_composition.py  test_theta.py
tests/: run_canon_coherence.py  test_edcm_scorer.py  test_formula_R_golden.py  test_guardian.py  test_instance_core_hosting.py  test_ptca_composition.py  test_theta.py  test_ui_metadata.py
tests/fixtures/: r_golden_001.json
tests/golden/: r_golden_001.json
