[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "interdependent-core"
version = "0.1.0"
description = "PCNA/PCTA/PTCA/PCEA/EDCM — interdependent neural, tensor, encryption, and transcript analysis library"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Erin Patrick Spencer", email = "wayseer@interdependentway.org" }
]
requires-python = ">=3.9"
dependencies = [
  "cryptography>=41",
]

[project.urls]
Homepage = "https://github.com/erinepshovel-code/Interdependent-core"
Repository = "https://github.com/erinepshovel-code/Interdependent-core"

[tool.setuptools.packages.find]
where = ["."]
include = ["interdependent_lib*"]

[tool.setuptools.package-data]
"interdependent_lib.edcm.data" = ["*.json"]

[tool.pytest.ini_options]
# Scope test discovery to the monolith's own tests/ directory. Sibling
# scaffolds like prime_core/ ship their own pytest config and are not
# discoverable from this root.
testpaths = ["tests"]